# KMC-for-sbwt

./: CMakeLists.txt  Makefile  README.md
kmc_core/: kff_writer.h  splitter.cpp
kmc_tools/: bundle.h  check_kmer.h  config.h  db_reader_factory.h  db_writer.h  db_writer_factory.h  defs.h  develop.h  dump_writer.h  expression_node.h  fastq_filter.cpp  fastq_filter.h  fastq_reader.cpp  fastq_reader.h  fastq_writer.cpp  fastq_writer.h  histogram_writer.h  kff_db_reader.h  kff_db_writer.h  kff_info_reader.cpp  kff_info_reader.h  kff_kmc2_reader_utils.h  kff_random_access.h  kmc1_db_reader.h  kmc1_db_writer.h  kmc2_db_reader.h  kmc_tools.cpp  kmer.h  kmer_file_header.cpp  kmer_file_header.h  meta_oper.h  nc_utils.cpp  nc_utils.h  operations.h  output_parser.h  parameters_parser.cpp  parameters_parser.h  parser.cpp  parser.h  percent_progress.cpp  (+7 more)
